--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "infrangible/m2-catalog-product-option-composite-product",
     "description": "Infrangible Magento 2 Catalog Product Option Composite Product",
     "type": "magento2-module",
-    "version": "1.0.2",
+    "version": "1.0.3",
     "license": "MIT",
     "keywords": [
         "Magento"
@@ -19,7 +19,7 @@
     "require": {
         "php": ">=7.1",
         "magento/framework": "~102.0.0|~103.0.0",
-        "infrangible/m2-catalog-product-option-composite": "~2.7|~3.0|~4.0",
+        "infrangible/m2-catalog-product-option-composite": "~2.7|~3.0|~4.0|~5.0",
         "infrangible/m2-catalog-product-option-product": "~1.13"
     },
     "autoload": {
